views/form/index.css
@import "../../components/base";

/* @define Form */
:root {
  --Form-space-sm: 2.2rem;
  --Form-space-md: 3rem;
  --Form-space-lg: 4rem;
  --Form-padding: 0.3rem;

  --Form-font-size-small: 1rem;
  --Form-font-size-interface: 1.5rem;
  --Form-font-size-title: 2rem;
  --Form-font-size-text: 1.7rem;

  --Form-border-width: 1px;

  --Form-animation-duration: 350ms;
  --Form-animation-easing: cubic-bezier(0.42, 0.34, 0.18, 0.99);
}

@media (min-height: 600px) {
  :root {
    --Form-space-md: 4rem;
    --Form-space-lg: 6rem;
    --Form-font-size-title: 2.6rem;
  }
}

@media (min-height: 500px) and (min-width: 1000px) {
  :root {
    --Form-space-md: 4rem;
    --Form-space-lg: 7rem;

    --Form-font-size-small: 1rem;
    --Form-font-size-interface: 1.5rem;
    --Form-font-size-text: 2rem;
    --Form-font-size-title: 3.75rem;
  }
}

/**
 * General form layout.
 * Handling only dimensions, positioning, margins and scrolling.
 */

.Form {
  width: 100%;
  height: 100%;
  -webkit-touch-callout: none;
}

.Form-statusbar {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: var(--Form-space-sm);
  user-select: none;
}

.Form-main {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: calc(100% - var(--Form-space-lg) - var(--Form-space-sm));
  position: relative;
  top: var(--Form-space-sm);
}

.Form-container {
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
  position: absolute;
  top: 0;
  left: 0;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}


.Form.is-intransition .Form-container {
  overflow: hidden;
}

.Form-footer,
.Form-nav {
  width: 100%;
  height: var(--Form-space-lg);
  position: fixed;
  bottom: 0;
  left: 0;
  z-index: 1;
  user-select: none;
}

.Form-footer {
  display: none;
}

.Form-tools {
  flex: 1 1 0;
  display: flex;
  position: relative;
}

.Form-answer {
  flex: 1 1 auto;
  display: flex;
  flex-direction: column;
  height: 100%;
}

.Form-answer--next {
  display: none;
  width: 100%;
  position: absolute;
  left: calc(100% * var(--Form-direction));
  top: 0;
}

.Form.is-intransition .Form-answer--next {
  display: flex;
}

.Form.is-intransition .Form-tools {
  z-index: -1;
  overflow: visible;
  animation: Form-tools--transition var(--Form-animation-duration) forwards var(--Form-animation-easing);
}

@keyframes Form-tools--transition {
  to {
    transform: translateX(calc(-100% * var(--Form-direction)));
  }
}

@media (min-width: 1000px) {
  .Form-statusbar,
  .Form-nav,
  .Form-footer {
    width: 50%;
  }

  .Form-statusbar{
    border-right: var(--Form-border-width) solid;
  }
  
  .Form-footer:hover:not(:empty),
  .Form-footer:focus-visible:not(:empty) {
    background-color: rgb(var(--color-red));
    color: #fff;
    border-color: rgb(var(--color-red));
  }
  
  .Form-footer:hover:not(:empty)::after,
  .Form-footer:focus-visible:not(:empty)::after {
    background-image: url("./prev-white.svg") !important;
  }

  :root .Form-action--next:hover:not(:disabled):not(.is-disabled),
  :root .Form-action--next:focus-visible:not(:disabled):not(.is-disabled) {
    background-image: none;
    color: #fff;
    outline: 1px solid #fff;
    outline-offset: 1px;
  }

  .Form-footer {
    display: block;
  }

  .Form-main {
    height: 100%;
    padding: 0;
    top: 0;
    flex-direction: row;
  }

  .Form-container {
    height: 100%;
    padding: 0;
    top: 0;
    flex-direction: row;
    overflow: hidden;
    -webkit-overflow-scrolling: auto;
  }

  .Form-question {
    width: 50%;
    height: calc(100% - var(--Form-space-sm) - var(--Form-space-lg));
    position: relative;
    top: var(--Form-space-sm);
    border-right: var(--Form-border-width) solid;
  }

  .Form-tools {
    height: 100%;
    width: calc(50% - var(--Form-space-lg));
    padding-right: var(--Form-space-lg);
    border: 0;
  }

  .Form-answer--next {
    padding-right: var(--Form-space-lg);
  }

  .Form-question,
  .Form-tools {
    overflow: auto;
    -webkit-overflow-scrolling: touch;
  }
}

/* -------------------------------------------------------------------------- */

/**
 * Root styles
 */

.Form {
  font-size: var(--Form-font-size-interface);
}

/* -------------------------------------------------------------------------- */

/**
 * Status bar
 */

.Form-statusbar {
  display: flex;
  align-items: center;
  padding: 0 var(--Form-padding);
  border-bottom: var(--Form-border-width) solid;
  text-transform: uppercase;
  background: #fff;
}

.Form-cancel {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  width: 50%;
  height: 100%;
  padding: 0 var(--Form-padding);
  border-left: var(--Form-border-width) solid;
  position: absolute;
  top: 0;
  right: 0;
  text-align: right;
}

.Form-cancel:hover {
  background: rgb(var(--color-red));
  color: #fff;
}

@media (min-width: 1000px) {
  .Form-cancel {
    width: auto;
    border: 0;
  }
}

/* -------------------------------------------------------------------------- */

/**
 * Footer
 */

@media (min-width: 1000px) {
  .Form-footer {
    display: flex;
    padding: 0 var(--Form-padding) 0 var(--Form-space-lg);
    height: var(--Form-space-lg);
    border-top: var(--Form-border-width) solid;
    border-right: var(--Form-border-width) solid;
    text-transform: uppercase;
    background: #fff;
  }

  .Form-footer:not(:empty)::after {
    content: "";
    width: var(--Form-space-lg);
    height: var(--Form-space-lg);
    position: absolute;
    bottom: 0;
    left: 0;
    background-image: url("./prev.svg");
    background-repeat: no-repeat;
    background-position: center center;
    background-size: var(--Form-space-md);
  }
}

/* -------------------------------------------------------------------------- */

/**
 * Nav with actions
 */

.Form-nav {
  display: flex;
  border-top: var(--Form-border-width) solid;
  background: #fff;
  text-transform: uppercase;
}

.Form-nav--placeholder {
  display: none;
}

.Form-action {
  flex: 1 1 50%;
  height: 100%;
  overflow: hidden;
  white-space: nowrap;
  font: inherit;
  font-size: 1.5rem;
}

.Form-action + .Form-action {
  border-left: var(--Form-border-width) solid;
}

.Form-action--prev {
  background: url("./prev.svg") no-repeat center center;
  background-size: var(--Form-space-md);
}

.Form-action.is-disabled {
  background-image: url("./disabled.svg");
  background-size: 101% 100%;
  pointer-events: none;
}

.Form-action.is-disabled + .Form-action.is-disabled {
  background-image: none;
  pointer-events: none;
}

:root:not([scripting-enabled]) .Form-action--next,
:root[scripting-enabled] .Form-action--next:not(:disabled) {
  background-image: url("./next.svg");
  background-repeat: no-repeat;
  background-position: center center;
  background-size: var(--Form-space-md);
}

:root:not([scripting-enabled]) .Form-action--submit,
:root[scripting-enabled] .Form-action--submit:not(:disabled) {
  background-color: rgb(var(--color-red));
  color: #fff;
}

:root .Form-action--prev:hover:not(:disabled):not(.is-disabled),
:root .Form-action--prev:focus-visible:not(:disabled):not(.is-disabled) {
  background-color: rgb(var(--color-red));
  background-image: url("./prev-white.svg");
}

:root .Form-action--next:hover:not(:disabled):not(.is-disabled),
:root .Form-action--next:focus-visible:not(:disabled):not(.is-disabled) {
  background-color: rgb(var(--color-red));
  background-image: url("./next-white.svg");
}

.Form-button {
  display: none;
}

.Form--summary .Form-button {
  display: block;
}

@media (min-width: 1000px) {
  .Form-nav {
    top: 0;
    right: 0;
    bottom: auto;
    left: auto;
    width: var(--Form-space-lg);
    height: 100%;
    border: 0;
    border-left: var(--Form-border-width) solid;
  }

  .Form-nav--placeholder {
    display: flex;
    position: absolute;
  }

  .Form.is-intransition .Form-nav:not(.Form-nav--placeholder) {
    z-index: -1;
    animation: Form-nav--transition var(--Form-animation-duration) forwards var(--Form-animation-easing);
  }

  @keyframes Form-nav--transition {
    to {
      transform: translateX(calc(-50vw * var(--Form-direction)));
    }
  }

  .Form-action {
    position: relative;
    text-transform: uppercase;
  }

  .Form-action + .Form-action {
    border: 0;
  }

  .Form-action.is-disabled {
    background-image: none;
    color: transparent;
  }

  .Form-button {
    display: block;
    position: absolute;
    right: 0;
    bottom: calc(var(--Form-space-lg) - 1em);
    transform-origin: 0 0;
    transform: translateX(calc(100% - (var(--Form-space-lg) / 2) - 0.5em)) rotate(-90deg);
  }

  .Form-action--submit {
    flex: 1 0 100%;
    cursor: pointer;
  }

  .Form-action--prev {
    display: none;
  }

  .Form-action--prev,
  .Form-action--prev.is-disabled,
  :root:not([scripting-enabled]) .Form-action--next,
  :root[scripting-enabled] .Form-action--next:not(:disabled) {
    background: none;
  }

  :root:not([scripting-enabled]) .Form-action--next::after,
  :root[scripting-enabled] .Form-action--next:not(:disabled)::after,
  :root[scripting-enabled] .Form-action--next:not(:disabled)::after,
  :root:not([scripting-enabled]) .Form-action--submit::after,
  :root[scripting-enabled] .Form-action--submit:not(:disabled)::after {
    content: "";
    width: var(--Form-space-lg);
    height: var(--Form-space-lg);
    position: absolute;
    bottom: 0;
    left: 0;
    background-image: url("./next.svg");
    background-repeat: no-repeat;
    background-position: center center;
    background-size: var(--Form-space-md);
  }

  :root:not([scripting-enabled]) .Form-action--submit::after,
  :root[scripting-enabled] .Form-action--submit:not(:disabled)::after,
  :root .Form-action--next:hover:not(:disabled):not(.is-disabled)::after,
  :root .Form-action--next:focus-visible:not(:disabled):not(.is-disabled)::after {
    background-image: url("./next-white.svg");
  }

  :root .Form-action--next:hover:not(:disabled):not(.is-disabled),
  :root .Form-action--next:focus-visible:not(:disabled):not(.is-disabled) {
    background-image: none;
    color: #fff;
    outline: 1px solid #fff;
    outline-offset: 1px;
  }
}

/* -------------------------------------------------------------------------- */

/**
 * Main
 */

.Form-main {
  justify-content: space-between;
}

.Form-question {
  padding: var(--Form-padding) var(--Form-padding) var(--Form-space-lg);
  font-size: var(--Form-font-size-title);
  background-color: #fff;
}

.Form-tools {
  font-size: var(--Form-font-size-text);
}

/* -------------------------------------------------------------------------- */

/**
 * Summary
 */

.Form-summary {
  flex: 1 1 auto;
  display: flex;
  flex-direction: column;
  font-size: 1.5rem;
  border-top: 1px solid rgb(var(--color-red));
}

@media (min-width: 1000px) {
  .Form-summary {
    border: 0;
  }
}

.Form-dl {
  margin: 0;
  width: 100%;
  padding-bottom: var(--Form-space-sm);
  border: solid;
  border-width: 0 0 var(--Form-border-width) 0;
}

.Form-title {
  padding: 0 var(--Form-padding);
  margin-top: var(--Form-space-sm);
  font-style: italic;
}

.Form-value {
  padding: 0 var(--Form-padding);
  margin: 0;
}

.Form-restart {
  padding: var(--Form-space-sm) var(--Form-padding);
}

.Form-link {
  text-decoration: underline;
}

@media (min-width: 1000px) {
  .Form-dl {
    border-top: 0;
  }
}

/* -------------------------------------------------------------------------- */

/**
 * Error
 */

 .Form-error {
  padding: 1rem;
  margin: 1rem 0.5rem;
  color: #fff;
  font-size: 14px;
  background-color: rgb(var(--color-red));
}

